# CineConecta

./: .gitmodules  README.md  cineconecta_key.pem  docker-compose.yaml
CODE/: Dockerfile  pom.xml
CODE/src/main/java/cineconecta/cineconecta/config/: SecurityConfig.java
CODE/src/main/java/cineconecta/cineconecta/controllers/: CineController.java  CineResponse.java  LogroController.java
CODE/src/main/java/cineconecta/cineconecta/model/: Director.java  Hotel.java
CODE/src/main/java/cineconecta/cineconecta/model/Users/: Achievements.java  Admin.java  Cinephile.java  Profile.java  User.java
CODE/src/main/java/cineconecta/cineconecta/repository/Users/: AchievementsRepository.java  AdminRepository.java  CinephileRepository.java  ProfileRepository.java  UsersRepository.java
CODE/src/main/java/cineconecta/cineconecta/service/: HotelService.java  LogroService.java
CODE/src/test/java/cineconecta/cineconecta/: CineconectaApplicationTests.java
ServiceCPP/: CMakeLists.txt
ServiceCPP/src/: db.cpp  db.h  main.cpp
ServiceCPP/src/controller/: LogroController.cpp  LogroController.h
ServiceCPP/src/repository/: LogroRepository.h
ServiceCPP/src/service/: LogroService.h
src/main/java/cineconecta/cineconecta/: CineconectaApplication.java
src/main/java/cineconecta/cineconecta/controllers/: CineController.java
src/main/java/cineconecta/cineconecta/model/: Persona.java
src/main/java/cineconecta/cineconecta/repository/: HotelRepository.java
src/main/resources/: application.yaml
